--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-ts",
+  "name": "next_typescript_relay",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,6 +7,9 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "relay": "relay-compiler --src ./ --schema ./schema.graphql --language typescript --exclude '**/.next/**' '**/node_modules/**' '**/test/**' '**/__generated__/**' '**/__out__/**'",
+    "codegen": "graphql-codegen --config codegen.yml",
+    "get-schema": "get-graphql-schema http://localhost:8080/graphql > schema.graphql",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,14 +17,45 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^4.8.0",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/styles": "^4.7.1",
+    "@types/next": "^9.0.0",
+    "@zeit/next-sass": "^1.0.1",
+    "babel-plugin-relay": "^7.1.0",
+    "classnames": "^2.2.6",
+    "dotenv": "^8.2.0",
+    "graphql": "^14.5.8",
+    "moment": "^2.24.0",
     "next": "^9.1.6",
+    "node-sass": "^4.13.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-relay": "^7.1.0",
+    "relay-runtime": "^7.1.0",
+    "underscore": "^1.9.1",
+    "yup": "^0.28.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.9.1",
+    "@graphql-codegen/introspection": "^1.9.1",
+    "@graphql-codegen/typescript": "^1.9.1",
+    "@graphql-codegen/typescript-operations": "^1.9.1",
+    "@graphql-codegen/typescript-react-apollo": "^1.9.1",
+    "@graphql-codegen/typescript-resolvers": "^1.9.1",
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "@types/react-relay": "^7.0.3",
+    "@types/relay-runtime": "^6.0.11",
+    "@types/underscore": "^1.9.4",
+    "@types/yup": "^0.26.26",
+    "@zeit/next-typescript": "^1.1.1",
+    "dotenv-webpack": "^1.7.0",
+    "get-graphql-schema": "^2.1.2",
+    "path": "^0.12.7",
+    "relay-compiler": "^7.1.0",
+    "relay-compiler-language-typescript": "^10.1.3",
+    "ts-node": "^8.5.4",
     "typescript": "^3.7.3"
   }
 }
